--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "https://github.com/build-week-weight-lifting-journal/weight-lifting-backend.git",
   "author": "MWeberLambdaweb19 <'mack.webb37@gmail.com'>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
